--- a/assets/scss/_all-supports.scss
+++ b/assets/scss/_all-supports.scss
@@ -720,7 +720,7 @@
                         opacity: .7;
                     }
                     &.disabled:after {
-                        opacity: .4;
+                        opacity: .4 !important;
                     }
                     &:hover,
                     &:focus {
