--- a/templates/tutorial/member/beta.html
+++ b/templates/tutorial/member/beta.html
@@ -12,7 +12,7 @@
 
 {% block breadcrumb %}
     {% with profile=usr|profile %}
-        <li ><a href="{{ profile.get_absolute_url }}">{{ usr.username }}</a></li>
+        <li><a href="{{ profile.get_absolute_url }}">{{ usr.username }}</a></li>
     {% endwith %}
     <li><a href="{% url "zds.tutorial.views.find_tuto" usr.pk %}?type=beta">Tutoriels en bêta</a></li>
     <li>Recherche</li>
@@ -21,36 +21,21 @@
 
 
 {% block headline %}
-    Tutoriels en bêta par {{ usr.username }}
+    <h2 class="ico-after ico-tutorials">Tutoriels en bêta par {{ usr.username }}</h2>
 {% endblock %}
 
 
 
 {% block content %}
-    <table>
-        <thead>
-            <tr>
-                <th width="25%">Tutoriels</th>
-                <th>Introduction</th>
-            </tr>
-        </thead>
-        <tbody>
-            {% for tuto in tutos %}
-                <tr>
-                    <td>
-                        <img src="{{ tuto.thumbnail.url }}" alt="">
-                        <a href="{{ tuto.get_absolute_url_beta }}">{{ tuto.title }}</a> 
-                        {% if tuto.description %}
-                            <p>
-                                {{ tuto.description }}
-                            </p>
-                        {% endif %}
-                    </td>
-                    <td>
-                        {{ tuto.get_introduction|truncatechars:200|emarkdown }}
-                    </td>
-                </tr>
+    {% if tutorials %}
+        <div class="tutorial-list">
+            {% for tutorial in tutorials %}
+                {% include 'tutorial/includes/tutorial_item.part.html' %}
             {% endfor %}
-        </tbody>
-    </table>
+        </div>
+    {% else %}
+        <p>
+            Aucun tutoriel disponible.
+        </p>
+    {% endif %}
 {% endblock %}
